Implemented pagination, filtering and ordering for the permissions list API. Updated service layer and repository layer to process pagination, filtering and ordering parameters. Re-factored the way in which relations are included within repositories to be more DRY. Updated the permissions controller integration test/ Updated the OAS3 specification.
