# src/za.co.grindrodbank.a3s/Controllers/PermissionController.cs
@@ -12,16 +12,27 @@ using za.co.grindrodbank.a3s.Services;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using za.co.grindrodbank.a3s.AbstractApiControllers;
+using za.co.grindrodbank.a3s.Helpers;
+using AutoMapper;
+using za.co.grindrodbank.a3s.Repositories;
+using za.co.grindrodbank.a3s.Models;
+using za.co.grindrodbank.a3s.A3SApiResources;
 
 namespace za.co.grindrodbank.a3s.Controllers
 {
     public class PermissionController : PermissionApiController
     {
         private readonly IPermissionService permissionsService;
+        private readonly IOrderByHelper orderByHelper;
+        private readonly IPaginationHelper paginationHelper;
+        private readonly IMapper mapper;
 
-        public PermissionController(IPermissionService permissionsService)
+        public PermissionController(IPermissionService permissionsService, IOrderByHelper orderByHelper, IPaginationHelper paginationHelper, IMapper mapper)
         {
             this.permissionsService = permissionsService;
+            this.orderByHelper = orderByHelper;
+            this.paginationHelper = paginationHelper;
+            this.mapper = mapper;
         }
 
         [Authorize(Policy = "permission:a3s.permissions.read")]
@@ -39,9 +50,21 @@ namespace za.co.grindrodbank.a3s.Controllers
         }
 
         [Authorize(Policy = "permission:a3s.permissions.read")]
-        public async override Task<IActionResult> ListPermissionsAsync([FromQuery] int page, [FromQuery, Range(1, 20)] int size, [FromQuery, StringLength(255, MinimumLength = 0)] string filterDescription, [FromQuery] List<string> orderBy)
+        public async override Task<IActionResult> ListPermissionsAsync([FromQuery]int page, [FromQuery][Range(1, 20)]int size, [FromQuery][StringLength(255, MinimumLength = 0)]string filterName, [FromQuery]string orderBy)
         {
-            return Ok(await permissionsService.GetListAsync());
+            List<KeyValuePair<string, string>> orderByKeyValueList = orderByHelper.ConvertCommaSeparateOrderByStringToKeyValuePairList(orderBy);
+            // Validate only correct order by components were supplied.
+            orderByHelper.ValidateOrderByListOnlyContainsCertainElements(orderByKeyValueList, new List<string> { "name" });
+            PaginatedResult<PermissionModel> paginatedResult =  await permissionsService.GetPaginatedListAsync(size, page, filterName, orderByKeyValueList);
+            // Generate a K-V pair of all the current applied filters sent to the controller so that pagination header URLs can include them.
+            List<KeyValuePair<string, string>> currrentFilters = new List<KeyValuePair<string, string>>
+            {
+                new KeyValuePair<string, string>("filterName", filterName)
+            };
+
+            paginationHelper.AddPaginationHeaderMetaDataToResponse(paginatedResult, currrentFilters, orderBy, "ListPermissions", Url, Response);
+
+            return Ok(mapper.Map<List<Permission>>(paginatedResult.Results));
         }
     }
 }
